Added tilt to places where it belongs Fixed affected tiles not being moved when resizing

--- a/Redstone/Makefile
+++ b/Redstone/Makefile
@@ -22,7 +22,7 @@ Redstone_PRIVATE_FRAMEWORKS = AppSupport
 Redstone_FILES = Redstone.xm
 
 # Core
-Redstone_FILES += Core/RSCore.m Core/RSAesthetics.m Core/RSMetrics.m Core/RSRootScrollView.m Core/RSPreferences.m Core/RSModalAlert.m
+Redstone_FILES += Core/RSCore.m Core/RSAesthetics.m Core/RSMetrics.m Core/RSRootScrollView.m Core/RSPreferences.m Core/RSModalAlert.m Core/RSTiltView.m
 
 # Lib
 Redstone_FILES += Lib/UIView+Easing.m Lib/easing.c Lib/CAKeyframeAnimation+AHEasing.m Lib/UIFont+WDCustomLoader.m
