Another try to fix App List entries Fixed tilt view highlight being deselected Added Messenger and WhatsApp tiles, changed iCloud Drive tile to match OneDrive icon Fixed tile badge layout for small sizes

--- a/Redstone/Makefile
+++ b/Redstone/Makefile
@@ -1,15 +1,15 @@
 # MAKEFILE 2
 
 # Configure your device details here
-export THEOS_DEVICE_IP=192.168.178.38
+export THEOS_DEVICE_IP=10.60.20.95
 export THEOS_DEVICE_PORT=22
 
 # Set the package version
-export PACKAGE_VERSION = $(shell date +%y)w$(shell date +%V)a
+export PACKAGE_VERSION = $(shell date +%y)w$(shell date +%V)b
 
 # Configure the target here
 TARGET = iphone:latest		# Phyiscal devices
-TARGET = simulator:clang	# Simulator
+#TARGET = simulator:clang	# Simulator
 
 
 # DO NOT EDIT ANYTHING BEYOND THIS POINT
