--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_deploy:
 - git config --global user.email "builds@travis-ci.com"
 - git config --global user.name "Travis CI"
 - export GIT_TAG=Redstone-Nightly_$(date +%y)w$(date +%V)b-$TRAVIS_BUILD_NUMBER
-- git tag $GIT_TAG -a -m "Redstone Nightly $(date +%y)w$(date +%V)b (Build $TRAVIS_BUILD_NUMBER"
+- git tag $GIT_TAG -a -m "Redstone Nightly $(date +%y)w$(date +%V)b (Build $TRAVIS_BUILD_NUMBER)"
 - git push -q https://$GH_TOKEN@github.com/SniperGER/Redstone --tags
 deploy:
   skip_cleanup: true
