--- a/Redstone/Makefile
+++ b/Redstone/Makefile
@@ -18,7 +18,7 @@ Redstone_PRIVATE_FRAMEWORKS = AppSupport MediaRemote
 Redstone_FILES = Redstone.xm
 
 # Core
-Redstone_FILES += Core/RSCore.m Core/RSAesthetics.m Core/RSMetrics.m Core/RSRootScrollView.m Core/RSPreferences.m Core/RSModalAlert.m Core/RSTiltView.m
+Redstone_FILES += Core/RSCore.m Core/RSAesthetics.m Core/RSMetrics.m Core/RSRootScrollView.m Core/RSPreferences.m Core/RSModalAlert.m Core/RSTiltView.m Core/RSNotificationView.m
 
 # Lib
 Redstone_FILES += Lib/UIView+Easing.m Lib/easing.c Lib/CAKeyframeAnimation+AHEasing.m Lib/UIFont+WDCustomLoader.m
