--- a/Redstone/Makefile
+++ b/Redstone/Makefile
@@ -15,7 +15,7 @@ include $(THEOS)/makefiles/common.mk
 TWEAK_NAME = Redstone
 Redstone_FRAMEWORKS = MediaPlayer
 Redstone_PRIVATE_FRAMEWORKS = AppSupport MediaRemote
-Redstone_FILES = Redstone.xm
+Redstone_FILES = Redstone_Core.xm Redstone_StartScreen.xm Redstone_LockScreen.xm Redstone_Notifications.xm
 
 # Core
 Redstone_FILES += Core/RSCore.m Core/RSAesthetics.m Core/RSMetrics.m Core/RSRootScrollView.m Core/RSPreferences.m Core/RSModalAlert.m Core/RSTiltView.m Core/RSNotificationView.m
@@ -33,7 +33,8 @@ Redstone_FILES += Launch/RSLaunchScreenController.m Launch/RSLaunchScreen.m
 Redstone_FILES += AppList/RSAppListController.m AppList/RSAppList.m AppList/RSApp.m AppList/RSAppListSection.m AppList/RSPinMenu.m AppList/RSSearchBar.m AppList/RSJumpList.m
 
 # Lock Screen
-Redstone_FILES += Redstone_LockScreen.xm LockScreen/RSLockScreenController.m LockScreen/RSLockScreen.m LockScreen/RSMediaControls.m LockScreen/RSPasscodeView.m LockScreen/RSPasscodeButton.m
+Redstone_FILES += LockScreen/RSLockScreenController.m LockScreen/RSLockScreenView.m
+#Redstone_FILES += Redstone_LockScreen.xm LockScreen/RSLockScreenController.m LockScreen/RSLockScreen.m LockScreen/RSMediaControls.m LockScreen/RSPasscodeView.m LockScreen/RSPasscodeButton.m
 
 include $(THEOS)/makefiles/tweak.mk
 
@@ -50,3 +51,5 @@ endif
 
 after-install::
 	install.exec "killall -9 SpringBoard"
+SUBPROJECTS += redstone_prefs
+include $(THEOS_MAKE_PATH)/aggregate.mk
