Added build instructions Added tile images to App List Added Home button handler Added border colors for dark and light themes Added Flyout UI component Fixed section headers in App List Fixed App List animations Tried to fix animation bugs for Launch Screen Improved wallpaper parallax Improved animations and animation cleanup

--- a/Redstone2/Makefile
+++ b/Redstone2/Makefile
@@ -21,7 +21,7 @@ Redstone2_FILES += Libraries/UIView+Easing.m Libraries/UIFont+WDCustomLoader.m L
 Redstone2_FILES += Core/RSCore.m Core/RSPreferences.m Core/RSMetrics.m Core/RSAesthetics.m
 
 # UI
-Redstone2_FILES += UI/RSTiltView.m
+Redstone2_FILES += UI/RSTiltView.m UI/RSFlyoutMenu.m
 
 # Home Screen
 Redstone2_FILES += HomeScreen/RSHomeScreenController.m HomeScreen/RSHomeScreenScrollView.m
