Do you really think I'm going to write out everything I changed? Here's a brief overview: Animations App List Download Progress Uninstall Modal alerts Colors Icons Preferences Search Bar

--- a/Redstone2/Makefile
+++ b/Redstone2/Makefile
@@ -15,13 +15,13 @@ Redstone2_PRIVATE_FRAMEWORKS = AppSupport
 Redstone2_FILES = Redstone2_Core.xm Redstone2_HomeScreen.xm
 
 # Libraries
-Redstone2_FILES += Libraries/UIView+Easing.m Libraries/UIFont+WDCustomLoader.m Libraries/CAKeyframeAnimation+AHEasing.m Libraries/easing.c
+Redstone2_FILES += Libraries/UIView+Easing.m Libraries/UIFont+WDCustomLoader.m Libraries/CAKeyframeAnimation+AHEasing.m Libraries/easing.c Libraries/UIImageAverageColorAddition.m
 
 # Core
 Redstone2_FILES += Core/RSCore.m Core/RSPreferences.m Core/RSMetrics.m Core/RSAesthetics.m
 
 # UI
-Redstone2_FILES += UI/RSTiltView.m UI/RSFlyoutMenu.m UI/RSProgressBar.m
+Redstone2_FILES += UI/RSTiltView.m UI/RSFlyoutMenu.m UI/RSProgressBar.m UI/RSAlertController.m UI/RSAlertAction.m UI/RSTextField.m
 
 # Home Screen
 Redstone2_FILES += HomeScreen/RSHomeScreenController.m HomeScreen/RSHomeScreenScrollView.m
@@ -33,7 +33,7 @@ Redstone2_FILES += HomeScreen/RSHomeScreenController.m HomeScreen/RSHomeScreenSc
 Redstone2_FILES += StartScreen/RSStartScreenController.m StartScreen/RSStartScreenScrollView.m StartScreen/RSTile.m StartScreen/RSTileInfo.m
 
 # App List
-Redstone2_FILES += AppList/RSAppListController.m AppList/RSAppListScrollView.m AppList/RSAppListSection.m AppList/RSApp.m AppList/RSDownloadingApp.m
+Redstone2_FILES += AppList/RSAppListController.m AppList/RSAppListScrollView.m AppList/RSAppListSection.m AppList/RSApp.m AppList/RSDownloadingApp.m AppList/RSJumpList.m
 
 # Launch Screen
 Redstone2_FILES += LaunchScreen/RSLaunchScreenController.m
@@ -53,5 +53,5 @@ after-install::
 	install.exec "killall -9 SpringBoard"
 endif
 
-SUBPROJECTS += Redstone2_UIKit
+SUBPROJECTS += Redstone2_UIKit Redstone2_Prefs
 include $(THEOS_MAKE_PATH)/aggregate.mk
