--- a/Redstone2/Tiles/People/Info.plist
+++ b/Redstone2/Tiles/People/Info.plist
@@ -21,6 +21,6 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017 Janik Schmidt. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
-	<string></string>
+	<string>RSPeopleTile</string>
 </dict>
 </plist>
