Added notifications to tiles Added option to hide Home Screen wallpaper Fixed App List search bar not resigning when pressing the home button Fixed Start Screen scrolling back when pressing the home button while no tile is pinned Fixed App List section header background offset when using stock wallpapers Fixed Launch Screen incorrectly animating closing apps Fixed Home Screen wallpaper not updating after selecting a new wallpaper Fixed parallax background scrolling even without pinned tiles Accent Colors can now be changed without restarting SpringBoard Made Filza the default File Explorer (iFile is considered unsafe)

--- a/Redstone2/Redstone2_Prefs/Resources/Root.plist
+++ b/Redstone2/Redstone2_Prefs/Resources/Root.plist
@@ -109,6 +109,8 @@
 			<string>accentColor</string>
 			<key>label</key>
 			<string>Accent Color</string>
+			<key>PostNotification</key>
+			<string>ml.festival.redstone.AccentColorChanged</string>
 			<key>validTitles</key>
 			<array>
 				<string>#FFB900</string>
@@ -215,6 +217,20 @@
 				<string>#3E65FF</string>
 				<string>auto</string>
 			</array>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<string>NO</string>
+			<key>defaults</key>
+			<string>ml.festival.redstone</string>
+			<key>key</key>
+			<string>showWallpaper</string>
+			<key>label</key>
+			<string>Show Wallpaper</string>
+			<key>PostNotification</key>
+			<string>ml.festival.redstone.WallpaperChanged</string>
 		</dict>
 		<dict>
 			<key>cell</key>
