Moved controller instances to Home Screen Controller Controller View scroll offset can be set without accessing a controller's view directly Introduced App Switcher experiment (not completely implemented yet) Added libObjcIpc and libWeatherManager dependencies to control file Added option to hide Home Screen wallpaper Added component debugging (let's you turn off components being tested internally) Weather Live Tile now uses the currently selected city in Weather.app (local city preferred)

--- a/Redstone2/Makefile
+++ b/Redstone2/Makefile
@@ -27,7 +27,7 @@ Redstone2_FILES += UI/RSTiltView.m UI/RSFlyoutMenu.m UI/RSProgressBar.m UI/RSAle
 Redstone2_FILES += HomeScreen/RSHomeScreenController.m HomeScreen/RSHomeScreenScrollView.m
 
 # App Switcher
-# Redstone2_FILES +=
+Redstone2_FILES += AppSwitcher/RSAppSwitcherController.m AppSwitcher/RSAppSwitcherContainerView.m AppSwitcher/RSAppSwitcherScrollView.m
 
 # Start Screen
 Redstone2_FILES += StartScreen/RSStartScreenController.m StartScreen/RSStartScreenScrollView.m StartScreen/RSTile.m StartScreen/RSTileInfo.m StartScreen/RSTileNotificationView.m StartScreen/RSBulletinView.m
