--- a/Redstone2/Redstone2_Prefs/Resources/Root.plist
+++ b/Redstone2/Redstone2_Prefs/Resources/Root.plist
@@ -334,6 +334,30 @@
 		</dict>
 		<dict>
 			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>label</key>
+			<string>Credits</string>
+			<key>detail</key>
+			<string>RDSCreditsListController</string>
+			<key>isController</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSButtonCell</string>
+			<key>action</key>
+			<string>donate</string>
+			<key>label</key>
+			<string>Keep our servers running</string>
+			<key>icon</key>
+			<string>paypal_logo.png</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+		</dict>
+		<dict>
+			<key>cell</key>
 			<string>PSButtonCell</string>
 			<key>label</key>
 			<string>Reset Start Screen Layout</string>
